<resources>
    <string name="app_name">NASApi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_start">Start</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="select_rover">Select Rover Type</string>
    <string-array name="rover_types_entries">
        <item>Curiosity</item>
        <item>Opportunity</item>
        <item>Spirit</item>
        <item>All Types</item>
    </string-array>
    <string-array name="rover_types_out">
        <item>curiosity</item>
        <item>opportunity</item>
        <item>spirit</item>
        <item></item>
    </string-array>

    <string name="sol_qty">Select Martian Rotation or Day</string>
    <string name="title_sol">Enter a value (days)</string>

    <string name="rover_camera_name">Select Kind of Camera</string>
    <string-array name="rover_camera_entries">
        <item>Front Hazard Avoidance Camera</item>
        <item>Rear Hazard Avoidance Camera</item>
        <item>Mast Camera</item>
        <item>Chemistry and Camera Complex</item>
        <item>Mars Hand Lens Imager</item>
        <item>Mars Descent Imager</item>
        <item>Navigation Camera</item>
        <item>Panoramic Camera</item>
        <item>Miniature Thermal Emission Spectrometer</item>
    </string-array>
    <string-array name="rover_camera_out">
        <item>FHAZ</item>
        <item>RHAZ</item>
        <item>MAST</item>
        <item>CHEMCAM</item>
        <item>MAHLI</item>
        <item>MARDI</item>
        <item>NAVCAM</item>
        <item>PANCAM</item>
        <item>MINITES</item>
    </string-array>

    <string name="page_title">Enter a value</string>
    <string name="page_num">Enter Data Page</string>

    <string name="title_activity_detail">DetailActivity</string>

    <!-- DUMMY DOWN -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contactbased on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_info_rover">InfoRover</string>
    <string name="title_activity_info_oppo">activity_info_oppo</string>
    <string name="title_activity_info_rover_oppo">InfoRoverOppo</string>
    <string name="title_activity_info_rover_sp">InfoRoverSp</string>
    <string name="title_activity_notes">Notes</string>


</resources>
