<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="curiosity"
        android:entries="@array/rover_types_entries"
        android:entryValues="@array/rover_types_out"
        android:key="select_rover"
        android:title="@string/select_rover" />

    <EditTextPreference
        android:defaultValue="1000"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/title_sol"
        android:key="input_sol" />

    <ListPreference
        android:defaultValue="navcam"
        android:entries="@array/rover_camera_entries"
        android:entryValues="@array/rover_camera_out"
        android:key="select_camera"
        android:title="@string/rover_camera_name" />

    <EditTextPreference
        android:defaultValue="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/page_num"
        android:key="input_page" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />



</PreferenceScreen>
